# ClientServerMessages

./: CMakeLists.txt  Readme.md
include/: client.h  server.h
src/: ClientConnection.cpp  ClientMain.cpp  Connections.cpp  ServerMain.cpp  client.cpp  server.cpp
ui/: clientdialog.ui  serverdialog.ui
